# marionette

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
data/: DefaultPose.json  FullTrackingBone.fbx  TrackingModel.json
data/opt/: SMPL_NEUTRAL_J.json  SMPL_NEUTRAL_J_regressor.json  SMPL_NEUTRAL_J_regressor_body25.json  SMPL_NEUTRAL_J_regressor_prior.json  SMPL_NEUTRAL_f.json  SMPL_NEUTRAL_kintree_table.json  SMPL_NEUTRAL_v_template.json  SMPL_NEUTRAL_weights.json  SMPL_NEUTRAL_weights_prior.json  gmm_covars.json  gmm_means.json  gmm_weights.json  observations_keypoints3d.json  params_Rh.json  params_Th.json  params_poses.json  params_shapes.json
fonts/: CMakeLists.txt
model_converter/: CMakeLists.txt  convert_model.cpp  fbx_loader.cpp  fbx_loader.hpp  model.hpp
protos/: CMakeLists.txt
src/: CMakeLists.txt  alignment.hpp  articulation_solver.cpp  articulation_solver.hpp  automatic_differentiation.hpp  bundle_adjust.hpp  camera_info.hpp  correspondance.cpp  correspondance.hpp  debug.cpp  debug.hpp  features.hpp  frame.hpp  glm_json_ext.hpp  global_registeration.cpp  global_registeration.hpp  icp_3d_2d_optimizer.cpp  icp_3d_2d_optimizer.hpp  icp_3d_3d_optimizer.cpp  icp_3d_3d_optimizer.hpp  model.hpp  model_detector.cpp  model_detector.hpp  model_optimizer.hpp  motion_estimation.hpp  motion_tracker.cpp  motion_tracker.hpp  nearest_neighbor.hpp  nonlinear_least_square_solver.hpp  nonlinear_solver.hpp  object_functions.hpp  point_cloud.hpp  registration.hpp  srt_transform.hpp  transform.hpp  triangulation.cpp  triangulation.hpp  utils.hpp
test/: CMakeLists.txt  dump.json  test.hpp  test_autodiff.hpp  test_fitting.cpp  test_reconstruction.cpp  test_solver.cpp
viewer/: CMakeLists.txt  axis_drawer.cpp  axis_drawer.hpp  bone_drawer.cpp  bone_drawer.hpp  box_drawer.cpp  box_drawer.hpp  drawer2d.cpp  drawer2d.hpp  frame_queue.hpp  grid_drawer.cpp  grid_drawer.hpp  imu_viewer_app.cpp  log_viewer_app.cpp  model_drawer.cpp  model_drawer.hpp  nuklear_glfw_gl3.h  nuklear_glfw_gl4.h  playback_stream.cpp  playback_stream.hpp  qprobe_playback_stream.cpp  qprobe_playback_stream.hpp  remote_sensor_stream.cpp  remote_sensor_stream.hpp  retarget.cpp  retarget.hpp  sphere_drawer.cpp  sphere_drawer.hpp  viewer.cpp  viewer.hpp  viewer_app.cpp  widget_drawer.cpp  widget_drawer.hpp
viewer/shaders/: color.frag  color.vert  position.frag  position.vert  shader.frag  shader.vert
